
1.08  2014-08-24

1.07  2014-08-23
  - Fixed small JSON serialization bug in Mango::BSON::Time.

1.06  2014-08-22
  - Added to_datetime method to Mango::BSON::Time.

1.05  2014-08-10
  - Added read_preference attribute to Mango::Cursor.

1.04  2014-07-25
  - Fixed connection leak.

1.03  2014-07-25
  - Improved Mango to avoid secondary nodes.

1.02  2014-07-24
  - Fixed version handling in Mango::GridFS.

1.01  2014-06-28
  - Improved update method in Mango::Collection to accept object ids.
    (alexbyk)
  - Fixed small bug in Mango::Cursor where callbacks would sometimes get the
    wrong number of arguments.

1.0  2014-06-24
  - Removed experimental status from distribution.

0.43  2014-06-15
  - Improved remove method in Mango::Collection to accept object ids.

0.42  2014-06-04
  - Added md5 method to Mango::GridFS::Readers.
  - Fixed bug in Mango::GridFS::Writer where files could get the wrong MD5
    checksum.

0.41  2014-06-02
  - Added await_data attribute to Mango::Cursor.

0.40  2014-05-31
  - Added inactivity_timeout attribute to Mango.
  - Fixed Mojolicious 5.0 support.

0.39  2014-05-14
  - Improved Mango::BSON performance.

0.38  2014-05-12
  - Changed heuristics for number detection in Mango::BSON to better line up
    with user expectations.

0.37  2014-05-12
  - Added support for performing blocking and non-blocking operations at the
    same time.

0.36  2014-05-05
  - Added support for TO_BSON method to Mango::BSON.

0.35  2014-05-04
  - Added num_to_return method to Mango::Cursor.
  - Fixed bug where Mango::Cursor would request too many documents.

0.34  2014-05-02
  - Fixed bug where some Mango::Collection methods passed the wrong invocant
    to callbacks. (alexbyk)

0.33  2014-04-30
  - Improved error message for old MongoDB versions.

0.32  2014-04-24
  - Added to_bytes method to Mango::BSON::ObjectID.
  - Improved Mango::BSON performance.

0.31  2014-04-23
  - Improved support for pre-encoded BSON documents.

0.30  2014-04-08