@@ -1,5 +1,7 @@
 
 1.08  2014-08-24
+  - Improved to_datetime method in Mango::BSON::Time to be able to handle
+    higher precision times.
 
 1.07  2014-08-23
   - Fixed small JSON serialization bug in Mango::BSON::Time.
